# tt-alloc-opt

./: CMakeLists.txt  LICENSE.txt  README.md  benchmark.cpp  fragmentation.cpp  main.cpp  test.cpp
tt_metal/impl/allocator/algorithms/: allocator_algorithm.hpp  free_list.cpp  free_list.hpp  free_list_opt.cpp  free_list_opt.hpp
